fix(package) Upgrade to ESLint v7

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "bugs": "https://github.com/creativewave/eslint-config/issues",
   "repository": "github:creativewave/eslint-config",
   "peerDependencies": {
-    "eslint": ">= 6"
+    "eslint": ">= 7"
   },
   "optionalDependencies": {
     "eslint-plugin-compat": ">= 3",
+    "eslint-plugin-node": ">=11",
     "eslint-plugin-react": ">= 7",
     "eslint-plugin-react-hooks": ">= 1"
   },
