--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "optionalDependencies": {
     "eslint-plugin-compat": ">= 3",
+    "eslint-plugin-jest": ">= 24",
     "eslint-plugin-node": ">=11",
     "eslint-plugin-react": ">= 7",
     "eslint-plugin-react-hooks": ">= 1"
