--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "peerDependencies": {
     "eslint": ">= 8"
   },
+  "dependencies": {
+    "@stylistic/eslint-plugin-js": ">= 2"
+  },
   "optionalDependencies": {
     "eslint-plugin-compat": ">= 6",
     "eslint-plugin-jest": ">= 28",
