fix(node) Replace eslint-plugin-node with eslint-plugin-n
eslint-plugin-node is no longer maintained and recommends eslint-plugin-n.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "optionalDependencies": {
     "eslint-plugin-compat": ">= 6",
     "eslint-plugin-jest": ">= 28",
-    "eslint-plugin-node": ">=11",
+    "eslint-plugin-n": ">=17",
     "eslint-plugin-react": ">= 7",
     "eslint-plugin-react-hooks": ">= 5"
   },
