--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": ">= 9"
   },
   "optionalDependencies": {
-    "@stylistic/eslint-plugin-js": ">= 4",
+    "@stylistic/eslint-plugin": ">= 5",
     "eslint-plugin-compat": ">= 6",
     "eslint-plugin-jest": ">= 28",
     "eslint-plugin-n": ">=17",
